mysite/cheatsheet.txt
>>> from news.models import News
>>> News(title='Новость 1', content='Контент новости 1')
<News: News object (None)>
>>> news1=_
>>> news1.title
'Новость 1'
>>> news1.id
>>> news1.save()
>>> news1.id
1
>>> from django.db import connection
>>> connection.queries
[{'sql': 'INSERT INTO "news_news" ("title", "content", "created_at", "updated_at", "photo", "is_published") VALUES (\'Новость 1\', \'Контент н
овости 1\', \'2020-08-19 14:25:46.948108\', \'2020-08-19 14:25:46.948108\', \'\', 1)', 'time': '0.000'}]
>>> news1.pk
1
>>> news2 = News(title='Новость 2', content='Контент новости 2')
>>> connection.queries
[{'sql': 'INSERT INTO "news_news" ("title", "content", "created_at", "updated_at", "photo", "is_published") VALUES (\'Новость 1\', \'Контент н
овости 1\', \'2020-08-19 14:25:46.948108\', \'2020-08-19 14:25:46.948108\', \'\', 1)', 'time': '0.000'}]
>>> news2.save()
>>> connection.queries
[{'sql': 'INSERT INTO "news_news" ("title", "content", "created_at", "updated_at", "photo", "is_published") VALUES (\'Новость 1\', \'Контент н
овости 1\', \'2020-08-19 14:25:46.948108\', \'2020-08-19 14:25:46.948108\', \'\', 1)', 'time': '0.000'}, {'sql': 'INSERT INTO "news_news" ("ti
tle", "content", "created_at", "updated_at", "photo", "is_published") VALUES (\'Новость 2\', \'Контент новости 2\', \'2020-08-19 15:06:03.7925
53\', \'2020-08-19 15:06:03.792553\', \'\', 1)', 'time': '0.000'}]
>>>
>>> news3 = News()
>>> news3.title = 'Новость3'
>>> news3.content = 'Контент новости3'
>>> news3.save()
>>> news4 = News.objects.create(title='Новость 4', content='Контент новости 4')
>>> News.objects.create(title='News 5', content='News 5 content')
<News: News object (5)>
>>> News.objects.all()
<QuerySet [<News: News object (1)>, <News: News object (2)>, <News: News object (3)>, <News: News object (4)>, <News: News object (5)>]>
>>> from news.models import News
>>> Mews.objects.all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Mews' is not defined
>>> News.objects.all()
<QuerySet [<News: Новость 1>, <News: Новость 2>, <News: Новость3>, <News: Новость 4>, <News: News 5>]>
>>> news = -
  File "<console>", line 1
    news = -
           ^
SyntaxError: invalid syntax
>>> news = _
>>> news
<QuerySet [<News: Новость 1>, <News: Новость 2>, <News: Новость3>, <News: Новость 4>, <News: News 5>]>
>>> for item in news:
...     print(item.title, item.is_published)
...
Новость 1 True
Новость 2 True
Новость3 True
Новость 4 True
News 5 True
>>>
>>> News.objects.create(title='News 5', content='News 6 content')
<News: News 5>
>>> News.objects.filter(title='News 5')
<QuerySet [<News: News 5>, <News: News 5>]>
>>> News.objects.filter(title='News 6')
<QuerySet []>
>>> News.objects.get(pk=5)
<News: News 5>
>>> News.objects.order_by('title')
<QuerySet [<News: News 5>, <News: News 5>, <News: Новость 1>, <News: Новость 2>, <News: Новость 4>, <News: Новость3>]>
>>> News.objects.order_by('-title')
<QuerySet [<News: Новость3>, <News: Новость 4>, <News: Новость 2>, <News: Новость 1>, <News: News 5>, <News: News 5>]>
>>> News.objects.exclude(title='News 5')
<QuerySet [<News: Новость 1>, <News: Новость 2>, <News: Новость3>, <News: Новость 4>]>

